force-app/main/default/objects/RV_Master_Blaster_Deprecated__c/RV_Master_Blaster_Deprecated__c.object-meta.xml
<CustomObject>
    <label>RV Master Blaster Deprecated</label>
    <nameField>
        <label>RV Master Blaster</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RV Master Blaster Deprecated</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>