force-app/main/default/objects/RV_Master_Blaster_Deprecated__c/fields/MaxMAWP__c.field-meta.xml
<CustomField>
    <fullName>MaxMAWP__c</fullName>
    <label>MaxMAWP</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>