force-app/main/default/objects/RV_Master_Blaster_Deprecated__c/fields/PosCMethod__c.field-meta.xml
<CustomField>
    <fullName>PosCMethod__c</fullName>
    <label>PosCMethod</label>
    <length>255</length>
    <type>Text</type>
</CustomField>