force-app/main/default/objects/RV_Master_Blaster_Deprecated__c/fields/VacCMethod__c.field-meta.xml
<CustomField>
    <fullName>VacCMethod__c</fullName>
    <label>VacCMethod</label>
    <length>255</length>
    <type>Text</type>
</CustomField>