force-app/main/default/objects/RV_Master_Blaster_Deprecated__c/fields/Venting__c.field-meta.xml
<CustomField>
    <fullName>Venting__c</fullName>
    <label>Venting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>